--- a/deep_learning/assignment1/svm.ipynb
+++ b/deep_learning/assignment1/svm.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "pdf-ignore"
@@ -453,9 +453,11 @@
     "# confident that your validation code works, you should rerun the validation   #\n",
     "# code with a larger value for num_iters.                                      #\n",
     "################################################################################\n",
-    "# *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
+    "# *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
     "pass\n",
-    "\n# *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "# *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "    \n",
     "# Print out results.\n",
     "for lr, reg in sorted(results):\n",
@@ -559,7 +561,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -573,7 +575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
